--- a/portfolio.css
+++ b/portfolio.css
@@ -69,14 +69,18 @@ body{
 }
 .About{
     background-color: rgb(105, 2, 105);
-    margin: 10 70 0 70 ;
+    margin: 10 70 20 70 ;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     border-radius: 20px;
-    height: 600;
+   
 }
 .profile_photo{
     margin: 40 30;
     border-radius: 20px;
     width: 300;
+    height: 300;
    
 }
 h2{
@@ -87,9 +91,7 @@ h2{
     font-size: 30;
 }
 .ab_side{
-    margin-left:400 ;
-    margin-right:40;
-    margin-top:-340;
+    
     color: white;
     font-size: 15px;
 }
@@ -99,7 +101,7 @@ th,td{
 }
 
 .About_me{
-    background-color: black;
+    background-color:rgba(0, 0,0, 1);
     padding-bottom: 20;
     border-radius: 10px;
     
@@ -108,19 +110,121 @@ th,td{
 .tab{
     margin-left: 70px;
     background-color: rgb(105, 2, 105);
-    margin: 10 70 0 70 ;
+    margin: 10 70 20 70 ;
     padding: 20px;
     border-radius: 20px;
 }
 
 .awards{
-    margin: 10 70 0 70 ;
+    margin: 10 70 20 70 ;
     background-color: rgb(105, 2, 105);
     padding: 20px;
     color: white;
     font-size: 15px;
     border-radius: 20px;
 }
+.projects{
+    margin-top: 40;
+    background-color: black;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: row;
+    justify-content: space-around;
+    color: white;   
+}
+@media (min-width:1100px){
+.items{
+    background-color: rgb(105, 2, 105);
+    padding: 20px;
+    color: white;
+    font-size: 15px;
+    border-radius: 20px;
+    width: 300;
+    height: 200;
+    margin-top: 20;
+    margin-bottom: 20;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+}
+@media (max-width:1100px){
+    .items{
+        background-color: rgb(105, 2, 105);
+        padding: 20px;
+        color: white;
+        font-size: 15px;
+        border-radius: 20px;
+        width: 200;
+        height: 200;
+        margin-top: 20;
+        margin-bottom: 20;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    }
+    @media (max-width:800px){
+        .items{
+            background-color: rgb(105, 2, 105);
+            padding: 20px;
+            color: white;
+            font-size: 15px;
+            border-radius: 20px;
+            width: 150;
+            height: 200;
+            margin-top: 20;
+            margin-bottom: 20;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+        }
+        }
 
+.items h6{
+    font-size: 20px;
+}
+.items:hover{
+    color: rgba(226, 124, 124);
+    
+}
+.items h6{
+    text-decoration: none;
+}
+.proj_colm{
+    border-radius: 20px;
+    margin-top: 40;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.proj_name{
+    color: white;
+    font-family: cursive;
+    margin: 5 20;
+    font-size: 30;
+
+}
+.contact{
+    background-color: black;
+    color: white;
+    font-size: 25;
+    font-family: cursive;
+    padding: 20;
+    margin-top: 40;
+   
+    border-radius: 20px;
+}
+.contact th, .contact td{
+    font-size: 15;
+    background-color: black;
+    color: rgb(225, 89, 222);
+    text-align:left;
+    
+}
 
 
